<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/colo7"
        android:layout_width="322dp"
        android:layout_height="38dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="19dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/blue"
        android:fontFamily="sans-serif-medium"
        android:includeFontPadding="false"
        android:text="@string/new_category"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="341dp"
        android:layout_height="437dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/newtimesheet_timesheet_button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colo7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/C5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:background="#00000000"
                android:fontFamily="sans-serif-medium"
                android:includeFontPadding="false"
                android:text="@string/category_name"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/black"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/C5" />

            <Button
                android:id="@+id/newcategory_submit"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:backgroundTint="@color/light_grey"
                android:text="@string/submit"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText"
                tools:ignore="SmallSp" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/newtimesheet_timesheet_button2"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/timehseetblue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/newcategory_profile_button"
        app:layout_constraintStart_toEndOf="@+id/newcategory_progress_button" />

    <ImageView
        android:id="@+id/newcategory_progress_button"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/progressblack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/newtimesheet_timesheet_button2"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/newcategory_profile_button"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/newtimesheet_timesheet_button2"
        app:srcCompat="@drawable/profileblack" />
</androidx.constraintlayout.widget.ConstraintLayout>