<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D2D30"
    android:scrollbarStyle="insideInset"
    android:scrollbarThumbHorizontal="@color/blue">

    <ImageView
        android:id="@+id/BackButton_HoursWorkedPage"
        android:layout_width="39dp"
        android:layout_height="41dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/colo4"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_252" />

    <TextView
        android:id="@+id/colo4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="138dp"
        android:background="#00000000"
        android:contentDescription="@string/todo"
        android:fontFamily="sans-serif-medium"
        android:includeFontPadding="false"
        android:text="@string/progress"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/colo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/colo2"
        android:layout_width="322dp"
        android:layout_height="55dp"
        android:layout_marginTop="33dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/blue"
        android:contentDescription="@string/todo"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:text="@string/hours_worked"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colo4"
        tools:ignore="RtlCompat" />

    <ImageView
        android:id="@+id/personalprogress_progress_icon"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="166dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/personalprogress_timesheet_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/progressblue" />

    <ImageView
        android:id="@+id/personalprogress_timesheet_icon"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/personalprogress_profile_icon"
        app:layout_constraintStart_toEndOf="@+id/personalprogress_progress_icon"
        app:srcCompat="@drawable/timehseetwhite" />

    <ImageView
        android:id="@+id/personalprogress_profile_icon"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/personalprogress_timesheet_icon"
        app:srcCompat="@drawable/profilewhite" />

    <Button
        android:id="@+id/start_date"
        android:layout_width="101dp"
        android:layout_height="48dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="33dp"
        android:backgroundTint="@color/blue"
        android:text="@string/start"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="10sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toStartOf="@+id/end_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colo2"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/end_date"
        android:layout_width="101dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="33dp"
        android:backgroundTint="@color/blue"
        android:text="@string/end"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="10sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start_date"
        app:layout_constraintTop_toBottomOf="@+id/colo2"
        tools:ignore="SmallSp" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="383dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/todo"
        android:fillViewport="true"
        android:keepScreenOn="false"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbarFadeDuration="0"
        android:scrollbarStyle="insideOverlay"
        android:scrollbarThumbHorizontal="@color/blue"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/personalprogress_progress_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_date"
        tools:ignore="MissingClass">
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="16dp" />
    </ScrollView>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="199dp"
        android:layout_height="24dp"
        android:backgroundTint="@color/white"
        android:foregroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.309" />


</androidx.constraintlayout.widget.ConstraintLayout>