<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D2D30">

    <ImageView
        android:id="@+id/newtimesheet_profile_button"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/newtimesheet_timesheet_button"
        app:srcCompat="@drawable/profileblack" />

    <ImageView
        android:id="@+id/newtimesheet_timesheet_button"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/timehseetblue"
        android:tint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/newtimesheet_profile_button"
        app:layout_constraintStart_toEndOf="@+id/newtimesheet_progress_button" />

    <TextView
        android:id="@+id/colo6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="#00000000"
        android:fontFamily="sans-serif-medium"
        android:includeFontPadding="false"
        android:text="@string/timesheets"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/colo7"
        android:layout_width="322dp"
        android:layout_height="38dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="19dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#84CDF8"
        android:fontFamily="sans-serif-medium"
        android:includeFontPadding="false"
        android:text="@string/new_timesheet"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colo6" />

    <ImageView
        android:id="@+id/newtimesheet_progress_button"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/progressblack"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/newtimesheet_timesheet_button"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="341dp"
        android:layout_height="437dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colo7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/timesheet_name"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/newtimesheet_timesheet_name"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/black"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/newtimesheet_submit"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:backgroundTint="#2D2D30"
                android:text="Submit"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:cornerRadius="10dp"
                app:rippleColor="@color/blue"
                tools:ignore="SmallSp" />
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>