<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D2D30"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/colo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="138dp"
        android:background="#00000000"
        android:fontFamily="sans-serif-medium"
        android:includeFontPadding="false"
        android:text="@string/progress"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/hoursworked_button"
        android:layout_width="346dp"
        android:layout_height="90dp"
        android:layout_marginTop="136dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="sans-serif-medium"
        android:text="@string/hours_worked"
        android:textColor="#000000"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colo"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/progress_personalprogress_button"
        android:layout_width="346dp"
        android:layout_height="90dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="sans-serif-medium"
        android:text="@string/personal_progress"
        android:textColor="#000000"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/personalprogress_timesheet_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hoursworked_button"
        app:layout_constraintVertical_bias="0.269"
        app:rippleColor="#2196F3"
        tools:ignore="VisualLintButtonSize" />

    <ImageView
        android:id="@+id/personalprogress_progress_icon"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/personalprogress_timesheet_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/progressblue"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/personalprogress_timesheet_icon"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="TODO"
        android:foregroundTint="#00FFFFFF"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/personalprogress_profile_icon"
        app:layout_constraintStart_toEndOf="@+id/personalprogress_progress_icon"
        app:srcCompat="@drawable/timehseetblack" />

    <ImageView
        android:id="@+id/personalprogress_profile_icon"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="16dp"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/personalprogress_timesheet_icon"
        app:srcCompat="@drawable/profileblack" />


</androidx.constraintlayout.widget.ConstraintLayout>