<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/colo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="138dp"
        android:background="#00000000"
        android:fontFamily="sans-serif-medium"
        android:includeFontPadding="false"
        android:text="@string/timesheets"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/timesheet_profile_button"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/timesheet_timesheet_button"
        app:srcCompat="@drawable/profileblack" />

    <ImageView
        android:id="@+id/timesheet_progress_button"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/progressblack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/timesheet_timesheet_button"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/timesheet_timesheet_button"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/timehseetblue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/timesheet_profile_button"
        app:layout_constraintStart_toEndOf="@+id/timesheet_progress_button" />

    <Button
        android:id="@+id/start_date"
        android:layout_width="101dp"
        android:layout_height="48dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/blue"
        android:text="@string/start"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="10sp"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colo3"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/end_date"
        android:layout_width="101dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="73dp"
        android:backgroundTint="@color/blue"
        android:text="@string/end"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="10sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colo3"
        tools:ignore="SmallSp" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/todo"
        android:fillViewport="true"
        android:keepScreenOn="false"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbarFadeDuration="0"
        android:scrollbarStyle="insideOverlay"
        android:scrollbarThumbHorizontal="@color/blue"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_date"
        tools:ignore="MissingClass">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/timesheet_one"
                android:layout_width="295dp"
                android:layout_height="69dp"
                android:layout_gravity="top|center"
                android:backgroundTint="@color/blue"
                android:text="Timesheet1"
                android:layout_marginBottom="0dp"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/timesheet_one1"
                android:layout_width="235dp"
                android:layout_height="69dp"
                android:backgroundTint="@color/blue"
                android:text="Tasks: 6"
                android:layout_marginTop="0dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                app:cornerRadius="10dp" />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/timesheet_new_timesheet"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="330dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toTopOf="@+id/timesheet_profile_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.623"
        app:srcCompat="@drawable/plus_icon_clear" />
</androidx.constraintlayout.widget.ConstraintLayout>